# loony_os

./: Cargo.toml  build.sh  run.sh
.cargo/: config.toml
docs/: getting_started.md
src/: main.rs  vga_buffer.rs
