[package]
name = "loony_os"
version = "0.1.0"
edition = "2024"
authors = ["Sankar Boro <s4nk4r.b0r0@gmail.com>"]

[[bin]]
name = "loony_os"
path="src/main.rs"
test = false
bench = false

[dependencies]
bootloader = "0.9"
x86_64 = "0.15.2"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
# size of the image's kernel (not usually needed to change)
